Bug 347872 - KRunner does not start when typing in Plasma 5.3
Summary: KRunner does not start when typing in Plasma 5.3
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.3.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-18 01:00 UTC by Edward Reiss
Modified: 2015-08-22 14:57 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.0
Sentry Crash Report:


Attachments
attachment-19484-0.html (834 bytes, text/html)
2015-07-17 11:38 UTC, Edward Reiss
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Edward Reiss 2015-05-18 01:00:22 UTC
KRunner does not start when typing a command or search term (i.e. not using ALT+F2), assuming no window has focus. However, if widget state is changed, i.e. locked to unlocked, or unlocked to locked,  KRunner does start when typing a command or search term unless the user logs on or logs off.

Reproducible: Always

Steps to Reproduce:
1. Click on an empty area of the desktop to ensure no windows are selected
2. Attempt to type command or search term in KRunner

Actual Results:  
1. Click on an empty area of the desktop to ensure no windows are selected
2. KRunner does not appear at the top center of the desktop

Expected Results:  
1. KRunner appears at the top center of the desktop
2. Type a command or search term
Comment 1 Vishesh Handa 2015-05-18 13:14:06 UTC
Confirmed.

This is regression. I remember implementing this for Plasma 5.
Comment 2 Edward Reiss 2015-05-20 21:02:12 UTC
Do we know where the issue is?
Comment 3 miku84 2015-05-26 12:38:19 UTC
Is it planned to be fixed for Plasma 5.3.2?
Comment 4 Vishesh Handa 2015-05-26 14:59:47 UTC
(In reply to miku84 from comment #3)
> Is it planned to be fixed for Plasma 5.3.2?

We really cannot say until we figure out what the problem is. If it's a trivial thing, then it will be backported, otherwise it'll be there for 5.4 (August).
Comment 5 Edward Reiss 2015-05-26 18:07:11 UTC
Is there a bug ID for Plasma?
Comment 6 miku84 2015-07-17 11:27:02 UTC
is there any workaround/ patch to have this working?
Or there is absolutely no info about this?
Comment 7 Edward Reiss 2015-07-17 11:38:19 UTC
Created attachment 93624 [details]
attachment-19484-0.html

If you toggle lock widgets, it works.

On Fri, Jul 17, 2015, 07:27 miku84 <miku84@gmail.com> wrote:

> https://bugs.kde.org/show_bug.cgi?id=347872
>
> --- Comment #6 from miku84 <miku84@gmail.com> ---
> is there any workaround/ patch to have this working?
> Or there is absolutely no info about this?
>
> --
> You are receiving this mail because:
> You reported the bug.
> You are on the CC list for the bug.
>
Comment 8 miku84 2015-07-19 15:03:12 UTC
I have tried with locked widgets and it had worked after I enabled the "Show the desktop toolbox" option in the right click desktop menu. But after restart I does not work at all even if I do these steps again. Tried with the default krunner setup as well, without success.
Comment 9 miku84 2015-07-19 17:53:25 UTC
It is very strange. After restart I need to click to the desktop toolbox (top left corner) and click tweaks and OK, then Krunner works afer typing. 
I think now you should be able to locate the issue in the code.
Comment 10 David Edmundson 2015-08-21 13:42:29 UTC
Problem is here:

desktopview.cpp
    if (!e->modifiers() && activeFocusItem() == contentItem()) {

we're saying if the focussed item is the window then we take the keys
which I think is the case when there's no focussed items.

At some point the main containment gained:

    MouseArea { // unfocus any plasmoid when clicking empty desktop area
        anchors.fill: parent
        onPressed: {
            root.focus = false;
            mouse.accepted = false // Bug 351277
        }
    }

which puts the focus item as the main containment.

I can't find a solution which doesn't just break something else.
Comment 11 Kai Uwe Broulik 2015-08-21 20:18:51 UTC
Git commit d0469af1fb7ed39573d6e3c0eff048b1dbbb6289 by Kai Uwe Broulik.
Committed on 21/08/2015 at 20:17.
Pushed by broulik into branch 'Plasma/5.4'.

Fix opening KRunner by typing on empty desktop

Let the key press event propagate first and if nobody accepted it,
we'll open KRunner
FIXED-IN: 5.4.1
REVIEW: 124871

M  +3    -3    shell/desktopview.cpp

http://commits.kde.org/plasma-workspace/d0469af1fb7ed39573d6e3c0eff048b1dbbb6289