Fix opening KRunner by typing on empty desktop

Let the key press event propagate first and if nobody accepted it,
we'll open KRunner

BUG: 347872
FIXED-IN: 5.4.1
REVIEW: 124871